Add Background Button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             <h1 class="text-3x1 font-bold">To Do List</h1>
         </header>
 
+        <div class="background-buttons">
+                <button onclick="changeBackground('#e6e6fa')" class="border px-[16px] py-[16px] rounded-[16px] bg-purple-500 text-white"></button>
+                <button onclick="changeBackground('#f0fff0')" class="border px-[16px] py-[16px] rounded-[16px] bg-green-500 text-white"></button>
+        </div>
+
         <!-- Form Add To Do -->
         <form>
             </div>
@@ -54,6 +59,8 @@
                      </div>
                 </li>
             </div>
+
+            
          </section> 
 
         <script src="js\script.js"></script>
